Add initial homepage markup

--- a/templates/index.html
+++ b/templates/index.html
@@ -1,12 +1,36 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Flask App</title>
     <link href="{{url_for('static',filename='css/output.css')}}" rel="stylesheet">
 </head>
+
 <body>
-    <h1>Welcome to the Flask App</h1>
+    <section class="w-full max-w-xl mx-auto py-12">
+        <h1 class="text-4xl text-center mb-8">SoFlood</h1>
+        <div class="relative mx-auto">
+            <label for="search" class="sr-only"> Search </label>
+
+            <input type="text" id="search" placeholder="Enter your address..."
+                class="w-full rounded-md border-gray-200 py-2.5 pe-10 shadow-sm sm:text-sm" />
+
+            <span class="absolute inset-y-0 end-0 grid w-10 place-content-center">
+                <button type="button" class="text-gray-600 hover:text-gray-700">
+                    <span class="sr-only">Search</span>
+
+                    <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5"
+                        stroke="currentColor" class="size-4">
+                        <path stroke-linecap="round" stroke-linejoin="round"
+                            d="M21 21l-5.197-5.197m0 0A7.5 7.5 0 105.196 5.196a7.5 7.5 0 0010.607 10.607z" />
+                    </svg>
+                </button>
+            </span>
+        </div>
+
+    </section>
 </body>
+
 </html>
