--- a/templates/index.html
+++ b/templates/index.html
@@ -31,6 +31,9 @@
         </div>
 
     </section>
+    <script async
+        src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDrx8wK6-zu7qePHwFpUEfbyU0Ib74jFqI&loading=async&libraries=places&callback=initAutocomplete"></script>
+    <script async src="{{url_for('static',filename='javascript/script.js')}}"></script>
 </body>
 
 </html>
