--- a/static/css/output.css
+++ b/static/css/output.css
@@ -921,6 +921,10 @@ select {
   color: rgb(75 85 99 / var(--tw-text-opacity));
 }
 
+.underline {
+  text-decoration-line: underline;
+}
+
 .shadow-sm {
   --tw-shadow: 0 1px 2px 0 rgb(0 0 0 / 0.05);
   --tw-shadow-colored: 0 1px 2px 0 var(--tw-shadow-color);
