--- a/templates/index.html
+++ b/templates/index.html
@@ -66,7 +66,7 @@
                     <div class="relative mt-16"> <!-- Added margin-top to push down -->
                         <label for="search" class="sr-only">Search</label>
                         <input type="text" id="search" placeholder="Enter your address..."
-                            class="w-full rounded-md border-gray-200 py-2.5 pe-10 shadow-sm sm:text-sm" />
+                            class="w-full rounded-md border-gray-200 p-[1rem] pe-10 shadow-sm sm:text-sm" />
                         <span class="absolute inset-y-0 right-0 grid w-10 place-content-center">
                             <button type="button" class="text-gray-600 hover:text-gray-700">
                                 <span class="sr-only">Search</span>
