--- a/templates/index.html
+++ b/templates/index.html
@@ -60,23 +60,30 @@
     <main>
         <section class="flex items-center justify-center w-full">
             <div class="flex items-center w-full max-w-6xl mx-auto">
-                <!-- The Search Bar -->
-                <div class="w-full max-w-xl text-center mr-8"> <!-- Adjusted margin-right -->
-                    <h1 class="text-4xl mb-8">Search for Your Flood Zone</h1>
-                    <div class="relative mt-16"> <!-- Added margin-top to push down -->
-                        <label for="search" class="sr-only">Search</label>
-                        <input type="text" id="search" placeholder="Enter your address..."
-                            class="w-full rounded-md border-gray-200 p-[1rem] pe-10 shadow-sm sm:text-sm" />
-                        <span class="absolute inset-y-0 right-0 grid w-10 place-content-center">
-                            <button type="button" class="text-gray-600 hover:text-gray-700">
-                                <span class="sr-only">Search</span>
-                                <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24"
-                                    stroke-width="1.5" stroke="currentColor" class="size-4">
-                                    <path stroke-linecap="round" stroke-linejoin="round"
-                                        d="M21 21l-5.197-5.197m0 0A7.5 7.5 0 105.196 5.196a7.5 7.5 0 0010.607 10.607z" />
-                                </svg>
-                            </button>
-                        </span>
+
+                <div>
+                    <!-- The Search Bar -->
+                    <div class="w-full max-w-xl text-center mr-8"> <!-- Adjusted margin-right -->
+                        <h1 class="text-4xl mb-8">Search for Your Flood Zone</h1>
+                        <div class="relative mt-16"> <!-- Added margin-top to push down -->
+                            <label for="search" class="sr-only">Search</label>
+                            <input type="text" id="search" placeholder="Enter your address..."
+                                class="w-full rounded-md border-gray-200 p-[1rem] pe-10 shadow-sm sm:text-sm" />
+                            <span class="absolute inset-y-0 right-0 grid w-10 place-content-center">
+                                <button type="button" class="text-gray-600 hover:text-gray-700">
+                                    <span class="sr-only">Search</span>
+                                    <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24"
+                                        stroke-width="1.5" stroke="currentColor" class="size-4">
+                                        <path stroke-linecap="round" stroke-linejoin="round"
+                                            d="M21 21l-5.197-5.197m0 0A7.5 7.5 0 105.196 5.196a7.5 7.5 0 0010.607 10.607z" />
+                                    </svg>
+                                </button>
+                            </span>
+                        </div>
+                    </div>
+
+                    <div class="flex justify-center mt-[1rem]">
+                        <button id="submit-btn" class="btn" disabled="true">View Flood Scores</button>
                     </div>
                 </div>
 
@@ -98,6 +105,15 @@
     <script async
         src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDrx8wK6-zu7qePHwFpUEfbyU0Ib74jFqI&loading=async&libraries=places&callback=initAutocomplete"></script>
     <script async src="{{url_for('static',filename='javascript/script.js')}}"></script>
+
+    <script>
+        const submitBtn = document.querySelector('#submit-btn');
+
+        submitBtn.addEventListener('click', () => {
+            window.location.href = window.location.href + `results?lat=${window.lat}&lng=${window.lng}&zip=${window.zip}`
+
+        });
+    </script>
 
 </body>
 
