Fix race condition with scripts

--- a/templates/index.html
+++ b/templates/index.html
@@ -102,9 +102,9 @@
                 Tunnel Team</a>.</p>
     </footer>
 
+    <script src="{{url_for('static',filename='javascript/script.js')}}"></script>
     <script async
         src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDrx8wK6-zu7qePHwFpUEfbyU0Ib74jFqI&loading=async&libraries=places&callback=initAutocomplete"></script>
-    <script async src="{{url_for('static',filename='javascript/script.js')}}"></script>
 
     <script>
         const submitBtn = document.querySelector('#submit-btn');
